[gd_scene load_steps=4 format=3 uid="uid://bfsbu21svmwin"]

[ext_resource type="Script" path="res://scenes/type_graph/type_graph_node.gd" id="1_1xg2p"]
[ext_resource type="PackedScene" uid="uid://bhsgjh0lvhhnr" path="res://scenes/ui/actor_view/actor_view.tscn" id="1_17any"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pqwmq"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
draw_center = false
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.780392, 0.780392, 0.780392, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
anti_aliasing = false

[node name="TypeGraphNode" type="MarginContainer"]
offset_right = 66.0
offset_bottom = 45.0
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16
script = ExtResource("1_1xg2p")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2
alignment = 2

[node name="ChildList" type="HBoxContainer" parent="VBox"]
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="ActorView" parent="VBox" instance=ExtResource("1_17any")]
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_pqwmq")
